--- a/static/package.json
+++ b/static/package.json
@@ -30,6 +30,8 @@
         "@tonaljs/scale-type": "^4.8.0",
         "@tonaljs/time-signature": "^4.8.0",
         "audiomotion-analyzer": "^3.6.1",
+        "essentia.js": "^0.1.3",
+        "fftjs": "0.0.4",
         "frequency-calculator": "0.0.8",
         "fs": "^0.0.1-security",
         "howler": "^2.2.3",
